tests/ui/invalid_config.stderr
error: unknown configuration `invalid_config`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `deref`, `into`, `opt_in`, `option`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `vis`, `where_clause`, `bounds`,
       `get`, `set`, `with`, and `get_mut`
 --> tests/ui/invalid_config.rs:2:13
  |
2 | #[fieldwork(invalid_config)]
  |             ^^^^^^^^^^^^^^

error: unknown configuration `invalid_config`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `deref`, `into`, `opt_in`, `option`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `vis`, `where_clause`, `bounds`,
       `get`, `set`, `with`, and `get_mut`
 --> tests/ui/invalid_config.rs:8:13
  |
8 | #[fieldwork(invalid_config = true)]
  |             ^^^^^^^^^^^^^^

error: unknown configuration `invalid`

       In this position, fieldwork recognizes:
       `argument`, `chain`, `copy`, `deref`, `get`, `get_mut`, `into`, `name`, `opt_in`, `option`,
       `option_borrow_inner`, `option_set_some`, `rename`, `rename_predicate`, `set`, `skip`, `vis`,
       and `with`
  --> tests/ui/invalid_config.rs:15:22
   |
15 | struct C(#[fieldwork(invalid)] String);
   |                      ^^^^^^^

error: unknown configuration `ger`; did you mean `get`?

       In this position, fieldwork recognizes:
       `argument`, `chain`, `copy`, `deref`, `get`, `get_mut`, `into`, `name`, `opt_in`, `option`,
       `option_borrow_inner`, `option_set_some`, `rename`, `rename_predicate`, `set`, `skip`, `vis`,
       and `with`
  --> tests/ui/invalid_config.rs:19:17
   |
19 |     #[fieldwork(ger)]
   |                 ^^^

error: unknown configuration `unknown`

       In this position, fieldwork recognizes:
       `argument`, `chain`, `copy`, `deref`, `doc`, `into`, `name`, `opt_in`, `option`,
       `option_borrow_inner`, `option_set_some`, `rename`, `rename_predicate`, `skip`, and `vis`
  --> tests/ui/invalid_config.rs:25:27
   |
25 |     #[fieldwork(get(copy, unknown))]
   |                           ^^^^^^^

error: unknown configuration `unknown`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `deref`, `doc_template`, `into`, `opt_in`, `option`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `template`, and `vis`
  --> tests/ui/invalid_config.rs:30:23
   |
30 | #[fieldwork(get(copy, unknown))]
   |                       ^^^^^^^

error: invalid value for key `bounds`
  --> tests/ui/invalid_config.rs:36:13
   |
36 | #[fieldwork(bounds = true)]
   |             ^^^^^^

error: invalid value for key `rename`
  --> tests/ui/invalid_config.rs:43:21
   |
43 |     #[fieldwork(get(rename = true))]
   |                     ^^^^^^
